fix: cloudcannon status logo on dark mode

--- a/_includes/styles/nav.scss
+++ b/_includes/styles/nav.scss
@@ -637,3 +637,7 @@
     }
   }
 }
+
+footer .l-header__logo path {
+	fill: light-dark(var(--color-neptune), white);
+}
